--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
-    "amd-to-es6": "^0.1.0",
+    "amd-to-es6": "mboxtael/amd-to-as6",
     "glob": "^7.1.3",
     "lebab": "^3.0.4",
     "lodash": "^4.17.11"
