--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "amd-to-es6": "mboxtael/amd-to-as6",
+    "babel-eslint": "^10.0.1",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-vue": "^5.2.2",
     "glob": "^7.1.3",
     "lebab": "^3.0.4",
     "lodash": "^4.17.11",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "prettier": "^1.16.4"
   },
   "devDependencies": {
-    "eslint": "^5.13",
+    "eslint": "^5.15.3",
     "eslint-config-oclif": "^3.1"
   },
   "engines": {
